<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/errorMessage2"
        android:layout_width="186dp"
        android:layout_height="20dp"
        android:textColor="#A30000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationConfirmPasswordField"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/errorMessage3"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:textColor="#A30000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />

    <Button
        android:id="@+id/regNextButton"
        android:layout_width="155dp"
        android:layout_height="59dp"
        android:backgroundTint="#4A1716"
        android:radius="47dp"
        android:text="@string/next"
        android:textColorHighlight="#3A1211"
        android:textColorLink="#3A1211"
        android:textSize="20sp"
        app:cornerRadius="47px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.634" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/registrationLoginField"
        android:layout_width="333dp"
        android:layout_height="53dp"
        android:background="@drawable/textline"
        android:hint="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/registrationPasswordField"
        android:layout_width="333dp"
        android:layout_height="53dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/textline"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationLoginField" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/registrationConfirmPasswordField"
        android:layout_width="333dp"
        android:layout_height="53dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/textline"
        android:hint="@string/confirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationPasswordField" />

    <TextView
        android:id="@+id/dateOfBirthText"
        android:layout_width="171dp"
        android:layout_height="29dp"
        android:text="@string/dateOfBirthText"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/regToLoginButton"
        android:layout_width="209dp"
        android:layout_height="60dp"
        android:background="@android:color/transparent"
        android:text="@string/haveAccount"
        android:textColor="#4A1716"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.709" />

    <TextView
        android:id="@+id/dateOfBirthSelector"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/dateOfBirthSelector"
        android:textColor="#A8A5A8"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.542" />
</androidx.constraintlayout.widget.ConstraintLayout>